tests/snapshots/bold_01.snap
---
source: src/parser.rs
expression: output
---
Emph
  Asterisk: "*"
  TextChunk
    Word: "a"
    WhiteSpace: " "
    Word: "bold"
    WhiteSpace: " "
    Word: "text"
    WhiteSpace: " "
    Word: "chunk"
  Asterisk: "*"
