tests/snapshots/bold_02.snap
---
source: src/parser.rs
expression: output
---
Emph
  Asterisk: "*"
  Error: " " (unexpected WhiteSpace)
  TextChunk
    Word: "a"
    WhiteSpace: " "
    Word: "bold"
    WhiteSpace: " "
    Word: "text"
    WhiteSpace: " "
    Word: "chunk"
  Asterisk: "*"
