tests/snapshots/bold_03.snap
---
source: src/parser.rs
expression: output
---
Emph
  Asterisk: "*"
  TextChunk
    Word: "a"
    WhiteSpace: " "
    Word: "bold"
    WhiteSpace: " "
    Word: "text"
    WhiteSpace: " "
    Word: "chunk"
    Error: " " (unexpected WhiteSpace)
  Asterisk: "*"
