tests/snapshots/bold_04.snap
---
source: src/parser.rs
expression: output
---
Bold
  Asterisk: "*"
  TextChunk
    Word: "a"
    WhiteSpace: " "
    Word: "bold"
    WhiteSpace: " "
    Word: "text"
    WhiteSpace: " "
    Word: "chunk"
    Error: " " (unexpected WhiteSpace)
  Asterisk: "*"
