tests/snapshots/bold_05.snap
---
source: src/parser.rs
expression: output
---
Bold
  Asterisk: "*"
  Error: " " (unexpected WhiteSpace)
  TextChunk
    Word: "a"
    WhiteSpace: " "
    Word: "bold"
    WhiteSpace: " "
    Word: "text"
    WhiteSpace: " "
    Word: "chunk"
    Error: " " (unexpected WhiteSpace)
  Asterisk: "*"
