tests/snapshots/bold_06.snap
---
source: src/parser.rs
expression: output
---
Bold
  Asterisk: "*"
  TextChunk
    Word: "a"
    WhiteSpace: " "
    Word: "bold"
    WhiteSpace: " "
    Error: "\n" (unexpected LineEnding)
    WhiteSpace: " "
    Word: "text"
    WhiteSpace: " "
    Word: "chunk"
  Asterisk: "*"
