tests/snapshots/bold_07.snap
---
source: src/parser.rs
expression: output
---
Bold
  Asterisk: "*"
  TextChunk
    Word: "a"
    WhiteSpace: " "
    Word: "bold"
    WhiteSpace: " "
    Word: "text"
    WhiteSpace: " "
    Word: "chunk"
    WhiteSpace: " "
    Word: "and"
    WhiteSpace: " "
    Word: "it"
    WhiteSpace: " "
    Word: "have"
    WhiteSpace: " "
    Word: "a"
    WhiteSpace: " "
  Verbatim
    Pipe: "|"
    TextChunk
      WhiteSpace: " "
      Word: "verbatim"
      WhiteSpace: " "
    Pipe: "|"
  TextChunk
    WhiteSpace: " "
    Word: "chunk"
    WhiteSpace: " "
    Word: "in"
    WhiteSpace: " "
    Word: "it"
    WhiteSpace: " "
    Colon: ":"
    RParen: ")"
  Asterisk: "*"
