tests/snapshots/heading_01.snap
---
source: src/parser.rs
expression: output
---
Heading
  Asterisk: "*"
  WhiteSpace: " "
  ParaSegment
    Word: "this"
    WhiteSpace: " "
    Word: "is"
    WhiteSpace: " "
    Word: "h1"
