tests/snapshots/heading_02.snap
---
source: src/parser.rs
expression: output
---
Heading
  Asterisk: "*"
  Asterisk: "*"
  WhiteSpace: " "
  ParaSegment
    Word: "this"
    WhiteSpace: " "
    Word: "is"
    WhiteSpace: " "
    Word: "h2"
