tests/snapshots/heading_03.snap
---
source: src/parser.rs
expression: output
---
Heading
  Asterisk: "*"
  Asterisk: "*"
  Asterisk: "*"
  WhiteSpace: " "
  ParaSegment
    Word: "this"
    WhiteSpace: " "
    Word: "is"
    WhiteSpace: " "
    Word: "h3"
