tests/snapshots/heading_05.snap
---
source: src/parser.rs
expression: output
---
Heading
  Asterisk: "*"
  Asterisk: "*"
  Asterisk: "*"
  Asterisk: "*"
  Asterisk: "*"
  WhiteSpace: " "
  ParaSegment
    Word: "this"
    WhiteSpace: " "
    Word: "is"
    WhiteSpace: " "
    Word: "h5"
